# Communication-graph

./: CMakeLists.txt  README.md  graphviz.7z
include/: Node.h  Service.h  mainwindow.h
src/: CMakeLists.txt  Node.cpp  Service.cpp  mainwindow.cpp
src/UI/: mainwindow.ui
